--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
                 </div>
             </div>
             <div class="user-info-container" id="user-info">
+                <div class="user-info-buttons" id="user-info-buttons">
+                    <button class="user-info-button" id="change-password-button"><img src="sources/change_password.png" alt="Change password"></button>
+                    <button class="user-info-button" id="delete-user-button"><img src="sources/trash-bin.png" alt="Delete"></button>
+                </div>
                 <div class="info-header">
                     <p class="info-header-p">Your Profile</p>
                 </div>
