--- a/index.html
+++ b/index.html
@@ -130,6 +130,13 @@
                     <button class="user-info-button" id="change-password-button"><img src="sources/change_password.png" alt="Change password"></button>
                     <button class="user-info-button" id="delete-user-button"><img src="sources/trash-bin.png" alt="Delete"></button>
                 </div>
+                <div class="change-password hidden" id="change-password-container">
+                    <div class="input-container password">
+                        <label for="password-input"></label>
+                        <input class="input" id="password-input" placeholder="New Password">
+                        <button class="change-password-submit" id="change-password-submit"><img src="sources/accept.png" alt="Change"></button>
+                    </div>
+                </div>
                 <div class="info-header">
                     <p class="info-header-p">Your Profile</p>
                 </div>
