--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
                 <div class="tasks-container" id="tasks-container">
                     <div class="tasks-table" id="tasks-table">
                         <div class="tasks-table-head">
-                            <div><p>Name</p></div>
+                            <div><p id="name-sort">Name</p></div>
                             <div><p>Description</p></div>
-                            <div><p>Date</p></div>
-                            <div><p>Time</p></div>
-                            <div><p>Status</p></div>
+                            <div><p id="date-sort">Date</p></div>
+                            <div><p id="time-sort">Time</p></div>
+                            <div><p id="status-sort">Status</p></div>
                         </div>
                         <div class="tasks-body" id="tasks-body">
 
