--- a/index.html
+++ b/index.html
@@ -77,11 +77,29 @@
                 <div class="tasks-container" id="tasks-container">
                     <div class="tasks-table" id="tasks-table">
                         <div class="tasks-table-head">
-                            <div><p id="name-sort">Name</p></div>
-                            <div><p>Description</p></div>
-                            <div><p id="date-sort">Date</p></div>
-                            <div><p id="time-sort">Time</p></div>
-                            <div><p id="status-sort">Status</p></div>
+                            <div id="name-sort">
+                                <p>Name</p>
+                                <div class="sort-arrow-container hidden" id="name-sort-arrow">
+                                    <img src="sources/arrow_down.png" alt="arrow">
+                                </div>
+                            </div>
+                            <div>
+                                <p>Description</p></div>
+                            <div id="date-sort">
+                                <p>Date</p>
+                            </div>
+                            <div id="time-sort">
+                                <p>Time</p>
+                                <div class="sort-arrow-container hidden" id="datetime-sort-arrow">
+                                    <img src="sources/arrow_down.png" alt="arrow">
+                                </div>
+                            </div>
+                            <div id="status-sort">
+                                <p>Status</p>
+                                <div class="sort-arrow-container hidden" id="status-sort-arrow">
+                                    <img src="sources/arrow_down.png" alt="arrow">
+                                </div>
+                            </div>
                         </div>
                         <div class="tasks-body" id="tasks-body">
 
