undo last action

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="tasks-buttons">
                     <button class="task-button" id="add-button" onclick="to_adding_task()">Add Task</button>
                     <button class="task-button" id="export-button">Export Task Table</button>
-                    <button class="task-button" id="undo-button">Undo</button>
+                    <button class="task-button undo-inactive" id="undo-button">Undo</button>
                 </div>
             </div>
             <div class="adding-task-form-container hidden" id="adding-task-form-container">
